tests/snapshots/parse__tests__data__blendrocktograss002.vmt.snap
---
source: tests/parse.rs
expression: result
---
worldvertextransition(WorldVertexTransitionMaterial(
  r#$basetexture: "cp_mountainlab/nature/rockwall001",
  r#$basetexture2: "cp_mountainlab/nature/grass001",
  r#$blendmodulatetexture: Some("nature/grass_blendmask"),
  r#$decal: false,
  r#$detail: None,
  r#$surfaceprop: Some("dirt"),
  r#$basetexturetransform: "center 0.5 0.5 scale 1 1 rotate 0 translate 0 0",
  r#$color: Vec3((1.0, 1.0, 1.0)),
  r#$decalscale: 1.0,
  r#$decalscale: Vec2((4.0, 4.0)),
  r#$detailblendfactor: 1.0,
  r#$detailblendmode: 1,
  r#$modelmaterial: None,
  r#$pointsamplemagfilter: false,
  r#$seamless_scale: 1.0,
  r#$alpha: 1.0,
  r#$alphatest: false,
  r#$alphatestreference: 1.0,
  r#$distancealpha: false,
  r#$nocull: false,
  r#$translucent: false,
  r#$bumpmap: Some("nature/rockwall009_height-ssbump"),
  r#$bumpmap2: None,
  r#$lightwarptexture: None,
  r#$selfillum: false,
  r#$ssbump: true,
  r#$envmap: None,
  r#$phong: 0.0,
  r#$nofog: false,
  r#$ignorez: false,
))
