tests/snapshots/parse__tests__data__handrail128_skin2.vmt.snap
---
source: tests/parse.rs
expression: result
---
vertexlitgeneric(VertexLitGenericMaterial(
  r#$basetexture: Some("models/props_trainyard/handrail128_skin2"),
  r#$detail: None,
  r#$decaltexture: None,
  r#$color2: Vec3((1.0, 1.0, 1.0)),
  r#$basetexturetransform: "center 0.5 0.5 scale 1 1 rotate 0 translate 0 0",
  r#$color: Vec3((1.0, 1.0, 1.0)),
  r#$decalscale: Vec2((4.0, 4.0)),
  r#$detailblendfactor: 1.0,
  r#$detailblendmode: 1,
  r#$modelmaterial: None,
  r#$pointsamplemagfilter: false,
  r#$seamless_scale: 1.0,
  r#$alpha: 1.0,
  r#$alphatest: false,
  r#$alphatestreference: 1.0,
  r#$distancealpha: false,
  r#$nocull: false,
  r#$translucent: false,
  r#$bumpmap: None,
  r#$lightwarptexture: None,
  r#$selfillum: false,
  r#$ssbump: false,
  r#$envmap: None,
  r#$phong: 0.0,
  r#$nofog: false,
  r#$ignorez: false,
))
